--- a/gestion-app-electron/package.json
+++ b/gestion-app-electron/package.json
@@ -16,6 +16,8 @@
     "better-sqlite3": "^11.10.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "jspdf": "^3.0.2",
+    "jspdf-autotable": "^5.0.2",
     "multer": "^2.0.1",
     "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
